--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <meta charset="utf-8">
+   <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Крестраж</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -12,7 +12,7 @@
     
      <style>.line__wrap span {
   display: block;
-  background: #e866d3;
+  background: #ff8422;
   position: absolute;
   margin: 0;
   padding: 0;
@@ -24,54 +24,25 @@
    <header>
    
            </header>
-     <div class=" container">
+     <div class="container">
          <div class="row"> 
-               <div class="col-sm">
     <div class="mx-auto" style="width: 200px;"><p class="maintext" >Крестраж!</p></div>
              </div>
-              </div>
-       <form action="/registration" method="POST" align="center">
-       <div class="row"> 
-             
-    <div class="col">
+          <div class="row"> 
+              <div class="col-sm">
+       <form action="/login" method="POST" align="center">
          <h3 style="font-family: 'Poiret One';" >Введите логин</h3>
            <% if (CurrentLogin == 1){ %>
-            <input type=text   rows="1" class="input"   id="login" name="login"/>
-         <hr style="margin-top: 0;">
-        </div>
-           
-           </div>
-                   
+           <input type=text size="75"  rows="1" class="input" style=" margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 2.2em; outline:none; border: 0px; text-align: center; height: 100%;"  id="login" name="login"/>
+                    <hr style="margin-top: 0;">
            <% } else {  %>
-           <div class="row"> 
-       <div class="col">
-         <input type=text   rows="1" class="input"   id="login" name="login"/>
-          <hr style="margin-top: 0;">
-      </div>
-               
-           </div>
-                    
+          <input type=text size="75"  rows="1" class="input" style=" margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 2.2em; outline:none; border: 0px; text-align: center; height: 100%;"  id="login" name="login"/>
+                    <hr style="margin-top: 0;">
             <% }  %>
-           
-            <div class="row"> 
-       <div class="col">
          <h3 style="font-family: 'Poiret One';" >Введите пароль</h3>
-           <input type=text   rows="1" class="input" style=""  id="password" name="password"/>
-            <hr style="margin-top: 0;">
-      </div>
-           </div>
-            
-            <div class="row"> 
-            <div class="col">
-            <h3 style="font-family: 'Poiret One';" >Введите электронную почту</h3>
            
-            <input type=text  size="80%" rows="1" class="input"   id="email" name="email"/>
-             <hr style="margin-top: 0;">
-      </div>
-           </div>
-            <div class="row"> 
-            <div class="col">
-       
+           <input type=text size="75"  rows="1" class="input" style=" margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 2.2em; outline:none; border: 0px; text-align: center; height: 100%;"  id="password" name="password"/>
+                    <hr style="margin-top: 0;">
            <div class="src">
                    <button id="Enterbutton" type="submit"><i  class="fa fa-envelope-o"></i>Вперёд!</button>
                   
@@ -86,17 +57,11 @@
            <% if (proverka == 1){%>
            <label>Пожалуйста, заполните все поля!</label>
            <%} %>
-                  <a href="/login" style="color:gray; float: right; padding-top: 10%;" >Уже зарегистрированы?</a>
-            </div>    
-            </div>
      </form>   
-              
-           </div>
-     
-            
-        
-        
-         
+             </div>
+               </div>
+          <a href="/reg" style="color:gray; float: right; padding-top: 10%;" >Еще не зарегистрированы?</a>
+         </div>
        <script>
      var input = document.getElementById("login");
 input.addEventListener("keyup", function(event) {
@@ -114,6 +79,7 @@ input.addEventListener("keyup", function(event) {
     }
 });
                       </script>
+     
            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>         
