--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -22,7 +22,7 @@
          <div class="krestragedisp1 mx-auto" style="width: 200px;"><p class="maintext">Крестраж!</p></div>
         <div id="myLinks">
         <li class="navwishes navwishes-s top-fixed_li "><a href="/wishes/">Желания</a></li>
-        <li class="top-fixed_li navmenu navgroups navgroups-s"><a href="/groups">Группы</a></li>
+        <li class="top-fixed_li navmenu navgroups navgroupsActive"><a href="/groups">Группы</a></li>
         <li class="top-fixed_li top-fixed_li-s navmenu navacc-s navacc"><a href="/user/<%= user %>/">Аккаунт </a></li>
       <div class="krestragedisp mx-auto" style="width: 200px;"><p class="maintext" >Крестраж!</p></div>
             
