--- a/views/users.ejs
+++ b/views/users.ejs
@@ -23,7 +23,7 @@
         <div id="myLinks">
         <li class="navwishes navwishes-s top-fixed_li "><a href="/wishes/">Желания</a></li>
         <li class="top-fixed_li navmenu navgroups navgroups-s"><a href="/groups">Группы</a></li>
-        <li class="top-fixed_li top-fixed_li-s navmenu navaccACTIVE navacc"><a href="/user/<%= user %>/">Аккаунт </a></li>
+        <li class="top-fixed_li top-fixed_li-s navmenu navacc navaccACTIVE"><a href="/user/<%= user %>/">Аккаунт </a></li>
       <div class="krestragedisp mx-auto" style="width: 200px;"><p class="maintext" >Крестраж!</p></div>
             
        </div>
