--- a/views/groups.ejs
+++ b/views/groups.ejs
@@ -24,7 +24,7 @@
         <li class="navwishes navwishes-s top-fixed_li "><a href="/wishes/">Желания</a></li>
         <li class="top-fixed_li navmenu navgroups navgroupsActive"><a href="/groups">Группы</a></li>
         <li class="top-fixed_li top-fixed_li-s navmenu navacc-s navacc"><a href="/user/<%= user %>/">Аккаунт </a></li>
-      <div class="krestragedisp mx-auto" style="width: 200px;"><p class="maintext" >Крестраж!</p></div>
+      <div class="krestragedisp mx-auto" style="width: 200px;"><p class="maintextFXD" >Крестраж!</p></div>
             
        </div>
         <div class="fak">
@@ -43,7 +43,7 @@
                    <div class="col-sm"><button class="add" style="display: none" id = "1" type="submit">Добавить</button></div>
                 </div>
 </div>
-      <div class="col-sm"><input type=text size="75"  rows="1" class="input" style="margin-top: 10%; margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 2.2em; outline:none; border: 0px; text-align: center; height: 100%;"  id = "input" name="AddWish" placeholder="Добавить группу"/></div>
+      <div class="col-sm"><input maxlength="25" type=text size="75"  rows="1" class="input" style="margin-top: 10%; margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 2.2em; outline:none; border: 0px; text-align: center; height: 100%;"  id = "input" name="AddWish" placeholder="Добавить группу"/></div>
                     <hr style="margin-top: 0;">
      </form>
       <h4 style="margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 1.7em" >*Ваши группы*</h4>
