--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
- <head>
-   <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Крестраж</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
-     <script src="http://code.jquery.com/jquery-latest.js"></script>
-       <link rel = "stylesheet" type="text/css" href="/styles.css"/>
-    
-     <style>.line__wrap span {
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
+
+    <style>.line__wrap span {
   display: block;
   background: #ff8422;
   position: absolute;
@@ -18,70 +19,87 @@
   padding: 0;
 }
 </style>
- </head>
- <body> 
-     
-   <header>
-   
-           </header>
-     <div class="container">
-         <div class="row"> 
-    <div class="mx-auto" style="width: 200px;"><p class="maintext" >Крестраж!</p></div>
-             </div>
-          <div class="row"> 
-              <div class="col-sm">
-       <form action="/login" method="POST" align="center">
-         <h3 style="font-family: 'Poiret One';" >Введите логин</h3>
-           <% if (CurrentLogin == 1){ %>
-           <input type=text size="75"  rows="1" class="input" style=" margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 2.2em; outline:none; border: 0px; text-align: center; height: 100%;"  id="login" name="login"/>
-                    <hr style="margin-top: 0;">
-           <% } else {  %>
-          <input type=text size="75"  rows="1" class="input" style=" margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 2.2em; outline:none; border: 0px; text-align: center; height: 100%;"  id="login" name="login"/>
-                    <hr style="margin-top: 0;">
-            <% }  %>
-         <h3 style="font-family: 'Poiret One';" >Введите пароль</h3>
-           
-           <input type=text size="75"  rows="1" class="input" style=" margin-bottom: 0; font-family: 'Amatic SC', cursive; font-size: 2.2em; outline:none; border: 0px; text-align: center; height: 100%;"  id="password" name="password"/>
-                    <hr style="margin-top: 0;">
-           <div class="src">
-                   <button id="Enterbutton" type="submit"><i  class="fa fa-envelope-o"></i>Вперёд!</button>
-                  
-  <div class="line__wrap">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-</div>
-         
-           <% if (proverka == 1){%>
-           <label>Пожалуйста, заполните все поля!</label>
-           <%} %>
-     </form>   
-             </div>
-               </div>
-          <a href="/reg" style="color:gray; float: right; padding-top: 10%;" >Еще не зарегистрированы?</a>
-         </div>
-       <script>
-     var input = document.getElementById("login");
-input.addEventListener("keyup", function(event) {
-    event.preventDefault();
-    if (event.keyCode === 13) {
-        document.getElementById("myBtn").click();
-    }
-});
-           
-            var input = document.getElementById("password");
-input.addEventListener("keyup", function(event) {
-    event.preventDefault();
-    if (event.keyCode === 13) {
-        document.getElementById("Enterbutton").click();
-    }
-});
-                      </script>
-     
-           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>         
-      </body>
+</head>
+
+<body>
+
+    <header>
+
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="mx-auto" style="width: 200px;">
+                <p class="maintext">Крестраж!</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+                <form id="form1" action="/login" method="POST" align="center">
+                    <h3 style="font-family: 'Poiret One';">Введите логин</h3>
+                    <% if (CurrentLogin == 1){ %>
+                    <input type=text maxlength="22" rows="1" class="input" placeholder="Логин" id="login" name="login" onkeyup="return proverka(this);" autofocus />
+                    <hr style="width: 45%; margin-top: 0;">
+                    <% } else {  %>
+                    <input type=text maxlength="22" rows="1" class="input" placeholder="Логин" id="login" name="login" onkeyup="return proverka(this);" autofocus />
+                    <hr style="width: 45%; margin-top: 0;">
+
+                    <% }  %>
+                    <h3 style="font-family: 'Poiret One';">Введите пароль</h3>
+                    <input type="password" maxlength="22" rows="1" class="input" style="" placeholder="Надёжный пароль" id="password" name="password" onkeyup="return proverkaEMAIL(this);" />
+                    <hr style="width: 45%;; margin-top: 0;">
+                    <div class="src">
+                        <button id="Enterbutton" type="submit"><i class="fa fa-envelope-o"></i>Вперёд!</button>
+
+                        <div class="line__wrap">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </div>
+
+                    <% if (proverka == 1){%>
+                    <label>Пожалуйста, заполните все поля!</label>
+                    <%} %>
+                </form>
+            </div>
+        </div>
+        <a href="/reg" style="color:gray; float: right; padding-top: 10%;">Еще не зарегистрированы?</a>
+    </div>
+    <script>
+        var input = document.getElementById("login");
+        input.addEventListener("keyup", function(event) {
+            event.preventDefault();
+            if (event.keyCode === 13) {
+                form1.password.focus();
+                return false;
+            }
+        });
+
+        var input = document.getElementById("password");
+        input.addEventListener("keyup", function(event) {
+            event.preventDefault();
+            if (event.keyCode === 13) {
+                document.getElementById("Enterbutton").click();
+            }
+        });
+
+    </script>
+    <script type="text/javascript">
+        function proverka(input) {
+            var value = input.value;
+            var rep = /[\/\\ \;":']/;
+            if (rep.test(value)) {
+                value = value.replace(rep, '');
+                input.value = value;
+            }
+        }
+
+    </script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</body>
+
 </html>
