--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -26,51 +26,48 @@
            </header>
      <div class=" container">
          <div class="row"> 
-               <div class="col-sm">
-    <div class="mx-auto" style="width: 200px;"><p class="maintext" >Крестраж!</p></div>
+            
+    <div class="mx-auto" style="width: 200px;"><p class="maintext" >Крестраж!</p>
              </div>
               </div>
+          <div class="row"> 
+               <div class="col-sm">
        <form action="/registration" method="POST" align="center">
-       <div class="row"> 
+      
              
-    <div class="col">
+   
          <h3 style="font-family: 'Poiret One';" >Введите логин</h3>
            <% if (CurrentLogin == 1){ %>
-            <input type=text   rows="1" class="input"   id="login" name="login"/>
-         <hr style="margin-top: 0;">
-        </div>
+            <input type=text maxlength="22" rows="1" class="input"   id="login" name="login" onkeyup="return proverka(this);" autofocus/>
+            <hr style="width: 45%; margin-top: 0;">
+      
            
-           </div>
+          
                    
            <% } else {  %>
-           <div class="row"> 
-       <div class="col">
-         <input type=text   rows="1" class="input"   id="login" name="login"/>
-          <hr style="margin-top: 0;">
-      </div>
+
+         <input type=text maxlength="22" rows="1" class="input"   id="login" name="login" onkeyup="return proverka(this);"/>
+              <hr style="width: 45%; margin-top: 0;">
+   
                
-           </div>
+           
                     
             <% }  %>
            
-            <div class="row"> 
-       <div class="col">
+       
          <h3 style="font-family: 'Poiret One';" >Введите пароль</h3>
-           <input type=text   rows="1" class="input" style=""  id="password" name="password"/>
-            <hr style="margin-top: 0;">
-      </div>
-           </div>
+           <input type="password" maxlength="22" rows="1" class="input" style=""  id="password" name="password"/>
+               <hr style="width: 45%; margin-top: 0;">
+   
+        
             
-            <div class="row"> 
-            <div class="col">
+        
             <h3 style="font-family: 'Poiret One';" >Введите электронную почту</h3>
            
-            <input type=text  size="80%" rows="1" class="input"   id="email" name="email"/>
-             <hr style="margin-top: 0;">
-      </div>
-           </div>
-            <div class="row"> 
-            <div class="col">
+            <input type=text maxlength="30" size="80%" rows="1" class="input"   id="email" name="email" onkeyup="return proverkaEMAIL(this);"/>
+                 <hr style="width: 45%; margin-top: 0;">
+    
+           
        
            <div class="src">
                    <button id="Enterbutton" type="submit"><i  class="fa fa-envelope-o"></i>Вперёд!</button>
@@ -82,21 +79,16 @@
     <span></span>
   </div>
 </div>
-         
+                  
            <% if (proverka == 1){%>
            <label>Пожалуйста, заполните все поля!</label>
            <%} %>
+            </form>
+           </div>
+                   </div>
                   <a href="/login" style="color:gray; float: right; padding-top: 10%;" >Уже зарегистрированы?</a>
             </div>    
-            </div>
-     </form>   
-              
-           </div>
-     
-            
-        
-        
-         
+
        <script>
      var input = document.getElementById("login");
 input.addEventListener("keyup", function(event) {
@@ -114,6 +106,28 @@ input.addEventListener("keyup", function(event) {
     }
 });
                       </script>
+     <script type="text/javascript"> 
+function proverka(input) { 
+    var value = input.value; 
+    var rep = /[-\=\/\\\.\,\@\ \.;":']/; 
+    if (rep.test(value)) { 
+        value = value.replace(rep, ''); 
+        input.value = value; 
+    } 
+} 
+</script> 
+     
+         <script type="text/javascript"> 
+function proverkaEMAIL(input) { 
+    var value = input.value; 
+    var rep = /[\/\\ \;":']/; 
+    if (rep.test(value)) { 
+        value = value.replace(rep, ''); 
+        input.value = value; 
+    } 
+} 
+</script> 
+     
            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>         
