--- a/views/styles.css
+++ b/views/styles.css
@@ -37,7 +37,8 @@
     }
 
 .input{
-    width: 90%;
+    outline: none;
+    width: 35%;
     text-align: center;
     font-family: 'Amatic SC', cursive;
     border: 0px;
@@ -198,6 +199,7 @@ border: 1px solid gray;
    display: table;
    text-align: center;
     top: 0;
+    height: 10%;
     width: 100%;
      
        vertical-align: middle;
@@ -351,12 +353,21 @@ border: 1px solid gray;
             height: auto;
         }
     
-   .maintext{
+  
+ .maintextFXD{
             
-        
+        position: fixed;
+           font-family: 'Amatic SC', cursive;
+            font-size: 4em;
+         margin: 0;
+       padding: 0;
+        }
+ .maintext{
+            
+      
            font-family: 'Amatic SC', cursive;
             font-size: 5em;
-         
+        
         }
     
 
@@ -771,7 +782,7 @@ textarea {
 }
     
   #myLinks{
- display: block;
+ display: flex;
 }
 
     
@@ -780,9 +791,10 @@ textarea {
 /* Landscape phones and portrait tablets */
 @media (max-width: 767px) {
 #myLinks{
- display: block;
+ display: inline-block;
+    width: 100%;
 }
-
+    
      .navwishes{
            
             color: black;
@@ -801,6 +813,11 @@ textarea {
             background-color: transparent;
         }
         
+    .mob{
+        display: block;
+        
+    }
+    
         .navwishes:hover{
              transition: 0.1s;
             color: white;
@@ -818,8 +835,40 @@ textarea {
             color: white;
             background-color: orange;
         }
+    
+   
+.top-fixed_li {
+    float: right;
+     vertical-align: middle;
 }
+    
+    a{
+        font-size: 10px;
+    }
 
+.top-fixed_li a {
+    
+    transition: 0.1s;
+    display: block;
+    color: black;
+    text-decoration: none;
+     display: inline-block;
+     float: none;
+       vertical-align: middle;
+   
+}
+    .krestragedisp{
+        font-size: 1em;
+    }
+    
+    .maintext{
+        
+       margin: 0; 
+        padding-left: -100px;
+        font-size: 2em;
+    }
+    
+}
 /* Landscape phones and smaller */
 @media (max-width: 480px) {
 
@@ -928,7 +977,7 @@ textarea {
 
 .top-fixed_li a {
   
-    color: white;
+    color: black;
 }
 
     .mobileopt{
